--- a/src/views/About/projects.json
+++ b/src/views/About/projects.json
@@ -16,15 +16,44 @@
         "details": "这个项目就是本网站，一个使用“MERN”的全栈开发。前端框架使用react，状态管理使用redux toolkit，页面路由使用react router，组件使用了antd。后端使用node的express框架，数据库使用mongodb官方node库，云服务器是1核2G windows系统。开发环境使用vite搭建，打包也使用vite。本网站应用app和数据库部署在同一个服务器上，页面路由使用了ssr，具有简单的用户系统，界面采用响应式设计。"
     },
     {
+        "name": "aUniappProject",
+        "description": "体育测试类安卓app",
+        "code": "https://github.com/enoughtallisymcrift/aUniappProject",
+        "libraries": [
+            "uniapp",
+            "vue2",
+            "sqlite"
+        ],
+        "details": "这是一个使用uniapp开发的体育测试类app，数据展示相对简单，但测试流程相对复杂（输入用户信息；开始、中止、完成测试；数据处理保存输出等）。该app不需要http请求数据，但要在WiFi提供的局域网里与单片机进行tcp通信。"
+    },
+    {
+        "name": "anElectronProject",
+        "description": "桌面应用",
+        "code": "https://github.com/enoughtallisymcrift/anElectronProject",
+        "libraries": [
+            "electron",
+            "vue2",
+            "element ui",
+            "node"
+        ],
+        "details": "这是一个桌面程序，使用electron + vue2 + element套餐构建。"
+    },
+    {
         "name": "anArduinoProject",
-        "description": "体育中考50米跑测试仪硬件程序",
+        "description": "短跑测试仪硬件程序",
         "code": "https://github.com/enoughtallisymcrift/anArduinoProject",
         "libraries": [
-            "arduino",
-            "atmega8L",
-            "esp8266",
-            "nrf24l01"
+            "arduino"
         ],
-        "details": "这是一个嵌入式软件"
+        "details": "这是一个嵌入式软件开发项目，使用的是一款流行的个人电子制作开发框架arduino。"
+    },
+    {
+        "name": "monocraft",
+        "description": "VSCode主题",
+        "code": "https://github.com/enoughtallisymcrift/monocraft-VSCodeColorTheme",
+        "libraries": [
+            "VSCode"
+        ],
+        "details": "一款VSCode的主题，灵感来源于魔兽世界的职业颜色，在内置主题Monokai的基础上改变。欢迎使用！"
     }
 ]
