--- a/src/views/About/projects.json
+++ b/src/views/About/projects.json
@@ -13,7 +13,8 @@
             "vite",
             "antd"
         ],
-        "details": "这个项目就是本网站，一个使用“MERN”的全栈开发。前端框架使用react，状态管理使用redux toolkit，页面路由使用react router，组件使用了antd。后端使用node的express框架，数据库使用mongodb官方node库，云服务器是1核2G windows系统。开发环境使用vite搭建，打包也使用vite。本网站的应用app和数据库部署在同一个服务器上，页面路由使用了ssr，具有简单的用户系统，界面采用响应式设计。"
+        "details": "这个项目就是本网站，一个使用“MERN”的全栈开发。前端框架使用react，状态管理使用redux toolkit，页面路由使用react router，组件使用了antd。后端使用node的express框架，数据库使用mongodb官方node库，云服务器是1核 2GB 2Mbps windows系统。开发环境使用vite搭建，打包也使用vite。本网站的应用app和数据库部署在同一个服务器上，页面路由使用了ssr，具有简单的用户系统，界面采用响应式设计。",
+        "details2": "本网站在无浏览器缓存时的首页加载速度很慢，大概要等4到5秒，这是因为域名解析是免费版，解析速度很慢。在用浏览器的DevTools查看之后，首页加载时间大概在1.5秒左右。"
     },
     {
         "name": "aUniappProject",
