--- a/package.json
+++ b/package.json
@@ -3,13 +3,12 @@
     "version": "1.0.0",
     "description": "",
     "main": "index.js",
-    "type": "module",
     "scripts": {
         "dev": "nodemon index",
         "start": "cross-env NODE_ENV=production nodemon index",
         "build": "npm run build:client && npm run build:server",
-        "build:client": "vite build --outDir dist/client",
-        "build:server": "vite build --ssr src/server.jsx --outDir dist/server"
+        "build:client": "webpack --config webpack.client.config.js",
+        "build:server": "webpack --config webpack.server.config.js"
     },
     "keywords": [],
     "author": "",
@@ -17,12 +16,12 @@
     "dependencies": {
         "@ant-design/icons": "^4.7.0",
         "@reduxjs/toolkit": "^1.8.1",
+        "antd": "^4.20.6",
         "compression": "^1.7.4",
         "express": "^4.18.1",
         "express-session": "^1.17.3",
         "mongodb": "^4.7.0",
         "nanoid": "^4.0.0",
-        "antd": "^4.20.6",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-markdown": "^8.0.3",
@@ -30,16 +29,26 @@
         "react-router-dom": "^6.3.0"
     },
     "devDependencies": {
+        "@babel/core": "^7.18.10",
+        "@babel/preset-env": "^7.18.10",
+        "@babel/preset-react": "^7.18.6",
         "@types/react": "^18.0.0",
         "@types/react-dom": "^18.0.0",
-        "@vitejs/plugin-react": "^1.3.2",
+        "babel-loader": "^8.2.5",
         "cross-env": "^7.0.3",
+        "css-loader": "^6.7.1",
         "debug": "^4.3.4",
         "eslint": "^8.17.0",
         "eslint-plugin-react": "^7.30.0",
         "eslint-plugin-react-hooks": "^4.5.0",
+        "html-loader": "^4.1.0",
+        "html-webpack-plugin": "^5.5.0",
+        "mini-css-extract-plugin": "^2.6.1",
         "nodemon": "^2.0.18",
         "sass": "^1.53.0",
-        "vite": "^2.9.13"
+        "sass-loader": "^13.0.2",
+        "webpack": "^5.74.0",
+        "webpack-cli": "^4.10.0",
+        "webpack-node-externals": "^3.0.0"
     }
 }
