--- a/package.json
+++ b/package.json
@@ -3,13 +3,12 @@
     "version": "1.0.0",
     "description": "",
     "main": "index.js",
-    "type": "module",
     "scripts": {
         "dev": "nodemon index.js",
         "start": "cross-env NODE_ENV=production nodemon index.js",
         "build": "npm run build:client && npm run build:server",
-        "build:client": "webpack --config webpack.client.config.cjs",
-        "build:server": "webpack --config webpack.server.config.cjs"
+        "build:client": "webpack --config webpack.client.config.js",
+        "build:server": "webpack --config webpack.server.config.js"
     },
     "keywords": [],
     "author": "",
