--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-        "dev": "nodemon index.js",
-        "start": "cross-env NODE_ENV=production nodemon index.js",
+        "dev": "nodemon index.mjs",
+        "start": "cross-env NODE_ENV=production nodemon index.mjs",
         "build": "npm run build:client && npm run build:server",
         "build:client": "webpack --config webpack.client.config.js",
         "build:server": "webpack --config webpack.server.config.js"
