--- a/package.json
+++ b/package.json
@@ -1,54 +1,53 @@
 {
-    "name": "my-web",
-    "version": "1.0.0",
-    "description": "",
-    "main": "index.js",
-    "scripts": {
-        "dev": "nodemon index.mjs",
-        "start": "cross-env NODE_ENV=production nodemon index.mjs",
-        "build": "npm run build:client && npm run build:server",
-        "build:client": "webpack --config webpack.client.config.js",
-        "build:server": "webpack --config webpack.server.config.js"
-    },
-    "keywords": [],
-    "author": "",
-    "license": "ISC",
-    "dependencies": {
-        "@ant-design/icons": "^4.7.0",
-        "@reduxjs/toolkit": "^1.8.1",
-        "antd": "^4.20.6",
-        "compression": "^1.7.4",
-        "express": "^4.18.1",
-        "express-session": "^1.17.3",
-        "mongodb": "^4.7.0",
-        "nanoid": "^4.0.0",
-        "react": "^18.2.0",
-        "react-dom": "^18.2.0",
-        "react-markdown": "^6.0.0",
-        "react-redux": "^8.0.2",
-        "react-router-dom": "^6.3.0"
-    },
-    "devDependencies": {
-        "@babel/core": "^7.18.10",
-        "@babel/preset-env": "^7.18.10",
-        "@babel/preset-react": "^7.18.6",
-        "@types/react": "^18.0.0",
-        "@types/react-dom": "^18.0.0",
-        "babel-loader": "^8.2.5",
-        "cross-env": "^7.0.3",
-        "css-loader": "^6.7.1",
-        "debug": "^4.3.4",
-        "eslint": "^8.17.0",
-        "eslint-plugin-react": "^7.30.0",
-        "eslint-plugin-react-hooks": "^4.5.0",
-        "html-loader": "^4.1.0",
-        "html-webpack-plugin": "^5.5.0",
-        "mini-css-extract-plugin": "^2.6.1",
-        "nodemon": "^2.0.18",
-        "sass": "^1.53.0",
-        "sass-loader": "^13.0.2",
-        "webpack": "^5.74.0",
-        "webpack-cli": "^4.10.0",
-        "webpack-node-externals": "^3.0.0"
-    }
+  "name": "mern-ssr-webpack",
+  "version": "1.0.0",
+  "description": "A MERN web app built with webpack.",
+  "type": "module",
+  "scripts": {
+    "build:client": "cross-env NODE_ENV=development webpack --config webpack.client.config.cjs --env development",
+    "build:server": "cross-env NODE_ENV=development webpack --config webpack.server.config.cjs --env development",
+    "build:production:client": "cross-env NODE_ENV=production webpack --config webpack.client.config.cjs --env production",
+    "build:production:server": "cross-env NODE_ENV=production webpack --config webpack.server.config.cjs --env production",
+    "build": "npm run build:client && npm run build:server",
+    "build:production": "npm run build:production:client && npm run build:production:server",
+    "start": "node ./dist/server.cjs",
+    "dev": "cross-env NODE_ENV=development webpack serve --config webpack.localhostDev.config.cjs --env development --env localhostDev"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "dependencies": {
+    "@ant-design/icons": "^4.7.0",
+    "@reduxjs/toolkit": "^1.8.3",
+    "antd": "^4.22.3",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-markdown": "^6.0.3",
+    "react-redux": "^8.0.2",
+    "react-router-dom": "^6.3.0"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.18.10",
+    "@babel/preset-env": "^7.18.10",
+    "@babel/preset-react": "^7.18.6",
+    "babel-loader": "^8.2.5",
+    "compression": "^1.7.4",
+    "cross-env": "^7.0.3",
+    "css-loader": "^6.7.1",
+    "debug": "^4.3.4",
+    "dotenv-webpack": "^8.0.0",
+    "express": "^4.18.1",
+    "express-session": "^1.17.3",
+    "html-webpack-plugin": "^5.5.0",
+    "mini-css-extract-plugin": "^2.6.1",
+    "mongodb": "^4.8.1",
+    "nanoid": "^4.0.0",
+    "sass": "^1.54.2",
+    "sass-loader": "^13.0.2",
+    "webpack": "^5.74.0",
+    "webpack-cli": "^4.10.0",
+    "webpack-dev-server": "^4.9.3",
+    "webpack-merge": "^5.8.0",
+    "webpack-node-externals": "^3.0.0"
+  }
 }
