--- a/src/views/About/projects.json
+++ b/src/views/About/projects.json
@@ -10,10 +10,11 @@
             "node",
             "express",
             "mongodb",
-            "vite",
-            "antd"
+            "webpack",
+            "antd",
+            "ssr"
         ],
-        "details": "这个项目就是本网站，一个使用“MERN”的全栈开发。前端框架使用react，状态管理使用redux toolkit，页面路由使用react router，组件使用了antd。后端使用node的express框架，数据库使用mongodb官方node库，云服务器是1核 2GB 2Mbps windows系统。开发环境使用vite搭建，打包也使用vite。本网站的应用app和数据库部署在同一个服务器上，页面路由使用了ssr，具有简单的用户系统，界面采用响应式设计。本网站在第一次打开时加载速度很慢，主要原因是免费版的域名解析速度很慢。"
+        "details": "这个项目就是本网站，一个使用“MERN”的全栈开发。前端框架使用react，状态管理使用redux toolkit，导航使用react router，组件使用了antd。后端使用node的express框架，数据库使用mongodb官方node库，云服务器是1核 2GB 2Mbps windows系统。开发和打包使用webpack。本网站的应用app和数据库部署在同一个服务器上，未用任何脚手架，全手动配置。网站具有简单的用户系统，界面采用响应式设计。本网站在第一次打开时加载速度很慢，主要原因是免费版的域名解析速度很慢。"
     },
     {
         "name": "aUniappProject",
