--- a/package.json
+++ b/package.json
@@ -36,12 +36,14 @@
     "css-loader": "^6.7.1",
     "debug": "^4.3.4",
     "dotenv-webpack": "^8.0.0",
+    "eslint": "^8.21.0",
+    "eslint-plugin-react": "^7.30.1",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "express": "^4.18.1",
     "express-session": "^1.17.3",
     "html-webpack-plugin": "^5.5.0",
     "mini-css-extract-plugin": "^2.6.1",
     "mongodb": "^4.8.1",
-    "nanoid": "^4.0.0",
     "sass": "^1.54.2",
     "sass-loader": "^13.0.2",
     "webpack": "^5.74.0",
