--- a/package.json
+++ b/package.json
@@ -35,7 +35,6 @@
     "cross-env": "^7.0.3",
     "css-loader": "^6.7.1",
     "debug": "^4.3.4",
-    "dotenv-webpack": "^8.0.0",
     "eslint": "^8.21.0",
     "eslint-plugin-react": "^7.30.1",
     "eslint-plugin-react-hooks": "^4.6.0",
@@ -47,6 +46,7 @@
     "sass": "^1.54.2",
     "sass-loader": "^13.0.2",
     "webpack": "^5.74.0",
+    "webpack-bundle-analyzer": "^4.5.0",
     "webpack-cli": "^4.10.0",
     "webpack-dev-server": "^4.9.3",
     "webpack-merge": "^5.8.0",
