--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "build:server": "cross-env NODE_ENV=development webpack --config webpack.server.config.cjs --env development",
     "build:production:client": "cross-env NODE_ENV=production webpack --config webpack.client.config.cjs --env production",
     "build:production:server": "cross-env NODE_ENV=production webpack --config webpack.server.config.cjs --env production",
-    "build": "npm run build:client && npm run build:server",
-    "build:production": "npm run build:production:client && npm run build:production:server",
+    "build": "npm run build:server && npm run build:client",
+    "build:production": "npm run build:production:server && npm run build:production:client",
     "start": "node ./dist/server.cjs",
     "dev": "cross-env NODE_ENV=development webpack serve --config webpack.localhostDev.config.cjs --env development --env localhostDev"
   },
