--- a/package.json
+++ b/package.json
@@ -8,10 +8,11 @@
     "build:server": "cross-env NODE_ENV=development webpack --config webpack.server.config.cjs --env development",
     "build:production:client": "cross-env NODE_ENV=production webpack --config webpack.client.config.cjs --env production",
     "build:production:server": "cross-env NODE_ENV=production webpack --config webpack.server.config.cjs --env production",
-    "build": "npm run build:server && npm run build:client",
+    "build": "npm run build:client && npm run build:server",
     "build:production": "npm run build:production:server && npm run build:production:client",
     "start": "node ./dist/server.cjs",
-    "dev": "cross-env NODE_ENV=development webpack serve --config webpack.localhostDev.config.cjs --env development --env localhostDev"
+    "dev": "cross-env NODE_ENV=development webpack serve --config webpack.localhostDev.config.cjs --env development --env localhostDev",
+    "serve_for_dev": "node ./localServer.js"
   },
   "keywords": [],
   "author": "",
