--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
   "license": "ISC",
   "dependencies": {
     "@ant-design/icons": "^4.7.0",
+    "@cdztt/tooltip-react": "^1.0.1",
     "@reduxjs/toolkit": "^1.8.3",
     "antd": "^4.22.3",
+    "message-react": "file:../message-react",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-markdown": "^6.0.3",
