--- a/package.json
+++ b/package.json
@@ -4,15 +4,15 @@
   "description": "A MERN web app built with webpack.",
   "type": "module",
   "scripts": {
-    "build:client": "cross-env NODE_ENV=development webpack --config webpack.client.config.cjs --env development",
-    "build:server": "cross-env NODE_ENV=development webpack --config webpack.server.config.cjs --env development",
+    "build:client": "cross-env NODE_ENV=development webpack watch --config webpack.client.config.cjs --env development",
+    "build:server": "cross-env NODE_ENV=development webpack watch --config webpack.server.config.cjs --env development",
     "build:production:client": "cross-env NODE_ENV=production webpack --config webpack.client.config.cjs --env production",
     "build:production:server": "cross-env NODE_ENV=production webpack --config webpack.server.config.cjs --env production",
     "build": "npm run build:client && npm run build:server",
     "build:production": "npm run build:production:client && npm run build:production:server",
-    "start": "node ./dist/server.cjs",
+    "start": "nodemon ./dist/server.cjs",
     "dev": "cross-env NODE_ENV=development webpack serve --config webpack.localhostDev.config.cjs --env development --env localhostDev",
-    "serve_for_dev": "node ./localServer.js"
+    "serve": "node ./localServer.js"
   },
   "keywords": [],
   "author": "",
