--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build:production:client": "cross-env NODE_ENV=production webpack --config webpack.client.config.cjs --env production",
     "build:production:server": "cross-env NODE_ENV=production webpack --config webpack.server.config.cjs --env production",
     "build:production": "npm run build:production:client && npm run build:production:server",
-    "start": "nodemon ./dist/server.cjs",
+    "start": "nodemon --openssl-legacy-provider ./dist/server.cjs",
     "dev": "cross-env NODE_ENV=development webpack serve --config webpack.localhostDev.config.cjs --env development --env localhostDev",
     "serve": "node ./localServer.js"
   },
