--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "express": "^4.18.1",
     "express-session": "^1.17.3",
+    "html-loader": "^5.0.0",
     "html-webpack-plugin": "^5.5.0",
     "mini-css-extract-plugin": "^2.6.1",
     "mongodb": "^4.8.1",
